--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,3 +4,60 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+
+
+body{}
+
+.container{
+	margin: auto;
+}
+
+.head{
+	background: url(../img/cliffs.jpg) no-repeat;
+	height: 550px;
+	text-align: center;
+}
+
+.logo{
+
+	img{
+		width: 275px;
+	}
+}
+.menu{
+
+	li{
+		display: inline-block;
+	}
+
+
+}
+
+.contain{
+	margin: auto;
+	max-width: 1080px;
+	width: 77.777778%;
+	
+	article{
+		margin: 20px auto 80px;
+		width: 90%;
+
+		h1{
+			text-align: center;
+		}
+
+		h2{
+			text-align: center;
+		}
+
+		p{
+			margin: 20px 0;
+		}
+
+	}
+
+}
+
+.intro{
+	text-align: center;
+}
