--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,7 +6,9 @@
 @import "compass/reset";
 
 
-body{}
+body{
+	font-family: 'Crimson Text', serif;
+}
 
 .container{
 	margin: auto;
@@ -26,8 +28,16 @@ body{}
 }
 .menu{
 
+	margin: 20px 0;
+
 	li{
 		display: inline-block;
+		margin: 0 20px;
+	}
+
+	a{
+		color: #fff;
+		text-decoration: none;
 	}
 
 
@@ -47,6 +57,7 @@ body{}
 		}
 
 		h2{
+			color: #226d38;
 			text-align: center;
 		}
 
@@ -56,6 +67,11 @@ body{}
 
 	}
 
+}
+
+.diff_color{
+
+	color: #226d38;
 }
 
 .intro{
