--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,6 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,96 +23,95 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../.rvm/gems/ruby-1.9.3-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
 
-/* line 11, ../sass/screen.scss */
+body {
+  font-family: 'Crimson Text', serif;
+}
+
 .container {
   margin: auto;
 }
 
-/* line 15, ../sass/screen.scss */
 .head {
   background: url(../img/cliffs.jpg) no-repeat;
   height: 550px;
   text-align: center;
 }
 
-/* line 23, ../sass/screen.scss */
 .logo img {
   width: 275px;
 }
 
-/* line 29, ../sass/screen.scss */
+.menu {
+  margin: 20px 0;
+}
 .menu li {
   display: inline-block;
+  margin: 0 20px;
+}
+.menu a {
+  color: #fff;
+  text-decoration: none;
 }
 
-/* line 36, ../sass/screen.scss */
 .contain {
   margin: auto;
   max-width: 1080px;
   width: 77.777778%;
 }
-/* line 41, ../sass/screen.scss */
 .contain article {
   margin: 20px auto 80px;
   width: 90%;
 }
-/* line 45, ../sass/screen.scss */
 .contain article h1 {
   text-align: center;
 }
-/* line 49, ../sass/screen.scss */
 .contain article h2 {
+  color: #226d38;
   text-align: center;
 }
-/* line 53, ../sass/screen.scss */
 .contain article p {
   margin: 20px 0;
 }
 
-/* line 61, ../sass/screen.scss */
+.diff_color {
+  color: #226d38;
+}
+
 .intro {
   text-align: center;
 }
