--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -59,6 +59,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 body {
+  color: #222;
   font-family: 'Crimson Text', serif;
 }
 
@@ -98,10 +99,12 @@ body {
   width: 90%;
 }
 .contain article h1 {
+  font-size: 35px;
   text-align: center;
 }
 .contain article h2 {
   color: #226d38;
+  font-size: 45px;
   text-align: center;
 }
 .contain article p {
@@ -114,4 +117,14 @@ body {
 
 .intro {
   text-align: center;
+}
+.intro p {
+  color: #999;
+  font-size: 21px;
+  line-height: 1.5;
+}
+
+.bio p {
+  font-size: 1.1em;
+  line-height: 1.3;
 }
