--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -47,7 +47,7 @@ body{
 .contain{
 	margin: auto;
 	max-width: 1080px;
-	width: 77.777778%;
+	/* width: 77.777778%;*/
 	
 	article{
 		margin: 20px auto 80px;
@@ -56,6 +56,10 @@ body{
 		h1{
 			font-size: 35px;
 			text-align: center;
+
+			@media screen and (max-width: 640px){
+				font-size: 20px;
+			}
 
 		}
 
@@ -76,6 +80,10 @@ body{
 .diff_color{
 
 	color: #226d38;
+
+	@media screen and (max-width: 640px){
+		display: block;
+	}
 }
 
 .intro{
@@ -85,6 +93,10 @@ body{
 		color: #999;
 		font-size: 21px;
 		line-height: 1.5;
+
+		@media screen and (max-width: 640px){
+			font-size: 16px;
+		}
 	}
 }
 
