--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -67,7 +67,13 @@ body{
 			color: #226d38;
 			font-size: 45px;
 			text-align: center;
+
+			&+ img{
+				text-align: center;
+			}
 		}
+
+
 
 		p{
 			margin: 20px 0;
@@ -91,7 +97,7 @@ body{
 
 	p{
 		color: #999;
-		font-size: 21px;
+		font-size: 27px;
 		line-height: 1.5;
 
 		@media screen and (max-width: 640px){
@@ -105,5 +111,16 @@ body{
 	p {
     font-size: 1.1em;
     line-height: 1.3;
+	}
 }
+
+.hpattern {
+    display: block;
+    text-align: center;
+    width: 100%;
+
+    img{
+    	margin: 20px auto;
+    	max-width: 100%;
+    }
 }
