--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -112,6 +112,9 @@ body {
   font-size: 45px;
   text-align: center;
 }
+.contain article h2 + img {
+  text-align: center;
+}
 .contain article p {
   margin: 20px 0;
 }
@@ -130,7 +133,7 @@ body {
 }
 .intro p {
   color: #999;
-  font-size: 21px;
+  font-size: 27px;
   line-height: 1.5;
 }
 @media screen and (max-width: 640px) {
@@ -142,4 +145,14 @@ body {
 .bio p {
   font-size: 1.1em;
   line-height: 1.3;
+}
+
+.hpattern {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.hpattern img {
+  margin: 20px auto;
+  max-width: 100%;
 }
