--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -78,15 +78,29 @@ body {
 }
 
 .menu {
-  margin: 20px 0;
+  padding: 20px 0;
+  transition: all 0.3s ease 0s;
 }
 .menu li {
   display: inline-block;
-  margin: 0 20px;
 }
 .menu a {
   color: #fff;
+  display: inline-block;
+  font-size: 1.2em;
+  padding: 0 20px;
   text-decoration: none;
+}
+
+.fixed {
+  background: #fff;
+  box-shadow: 0 0 5px #999;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.fixed a {
+  color: #999;
 }
 
 .contain {
