--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -16,10 +16,14 @@ body{
 }
 
 .head{
-	background: url(../img/cliffs.jpg) no-repeat;
+	background: url(../img/trees.jpg) no-repeat;
 	height: 550px;
 	text-align: center;
 	transition: all 0.3s ease 0s;
+
+	@media screen and (max-width: 640px){
+		height:auto;
+	}
 }
 
 .tree{
@@ -57,6 +61,10 @@ body{
 	    font-size: 1.2em;
 	    padding: 0 20px;
 	    text-decoration: none;
+
+	    &:hover{
+			text-decoration: underline;	    	
+	    }
 	}
 
 
