--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,6 +5,7 @@
 
 @import "compass/reset";
 
+* { box-sizing: border-box } 
 
 body{
 	color: #222;
@@ -51,6 +52,15 @@ body{
 	transition: all 0.3s ease 0s;
 	width: 100%;
 
+	@media screen and (max-width: 640px){
+			background: #fff;
+		    
+
+		    a{
+		    	color: #999;
+		    }
+		}
+
 	li{
 		display: inline-block;
 		
@@ -66,6 +76,12 @@ body{
 	    &:hover{
 			text-decoration: underline;	    	
 	    }
+
+	    @media screen and (max-width: 640px){
+		 
+		  	color: #999;
+		    
+		}
 	}
 
 
@@ -87,40 +103,39 @@ body{
 	margin: auto;
 	max-width: 1080px;
 	/* width: 77.777778%;*/
-	
-	article{
-		margin: 20px auto 80px;
-		width: 90%;
+}
 
-		h1{
-			font-size: 35px;
+article{
+	margin: 20px auto 80px;
+	width: 90%;
+
+	h1{
+		font-size: 35px;
+		text-align: center;
+
+		@media screen and (max-width: 640px){
+			font-size: 20px;
+		}
+	}
+
+	h2{
+		color: #226d38;
+		font-size: 45px;
+		text-align: center;
+
+		&+ img{
 			text-align: center;
-
-			@media screen and (max-width: 640px){
-				font-size: 20px;
-			}
-
 		}
-
-		h2{
-			color: #226d38;
-			font-size: 45px;
-			text-align: center;
-
-			&+ img{
-				text-align: center;
-			}
-		}
+	}
 
 
 
-		p{
-			margin: 20px 0;
-		}
-
+	p{
+		margin: 20px 0;
 	}
 
 }
+
 
 .diff_color{
 
@@ -162,4 +177,36 @@ body{
     	margin: 20px auto;
     	max-width: 100%;
     }
+}
+
+.network {
+
+	li {
+	    float: left;
+	    min-height: 350px;
+	    width: 33.3333%;
+
+	    @media screen and (max-width: 640px){
+			width: 50%;
+		}
+
+		@media screen and (max-width: 420px){
+			width: 100%;
+		}
+
+	}
+}
+
+.n_logo {
+    margin: auto;
+    width: 90%;
+
+    img{
+    	max-width: 100%;
+    }
+}
+
+.n_copy{
+
+	@extend .n_logo;
 }
