--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,7 +5,7 @@
 
 @import "compass/reset";
 
-* { box-sizing: border-box } 
+*, *:before, *:after { box-sizing: border-box;} 
 
 body{
 	color: #222;
@@ -209,4 +209,13 @@ article{
 .n_copy{
 
 	@extend .n_logo;
+
+	h3 {
+	    color: #226d38;
+	    margin: 10px 0;
+	}
+
+	p {
+	    line-height: 1.35;
+	}
 }
