--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -79,6 +79,7 @@ body {
 }
 @media screen and (max-width: 640px) {
   .head {
+    background: none !important;
     height: auto;
   }
 }
@@ -217,6 +218,11 @@ article p {
   padding: 50px 0;
 }
 
+.network {
+  margin: auto;
+  max-width: 1080px;
+  width: 90%;
+}
 .network li {
   float: left;
   min-height: 350px;
@@ -234,11 +240,21 @@ article p {
   }
 }
 
+.c_n {
+  background: #fff;
+  box-shadow: 0 0 2px #ccc;
+  margin: auto;
+  padding: 2% 0 10%;
+  width: 90%;
+}
+
 .n_logo, .n_copy {
   margin: auto;
   width: 90%;
 }
 .n_logo img, .n_copy img {
+  border-bottom: 1px solid #eee;
+  margin: 0 0 10px;
   max-width: 100%;
 }
 
