--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -245,5 +245,15 @@ article{
 	}
 }
 
+.contact {
+    padding: 0px 0 200px;
+}
+
+.contact_box{
+	margin: auto;
+	max-width: 400px;
+	width: 90%;
+
+}
 
 
