--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -273,7 +273,22 @@ article p {
 }
 
 .contact_box {
-  margin: auto;
+  margin: 0 auto 50px;
   max-width: 400px;
+  padding: 0 5% 5%;
   width: 90%;
+}
+
+.copyright {
+  background: #333;
+  color: #ccc;
+  padding: 20px 0;
+  text-align: center;
+}
+.copyright a {
+  color: #ccc;
+}
+.copyright a:hover {
+  color: #226d38;
+  text-decoration: none;
 }
