--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -254,6 +254,25 @@ article{
     max-width: 400px;
     padding: 0 5% 5%;
     width: 90%;
+
+    p {
+    	img {
+		    margin: 0 10px 0 0;
+		    width: 15px;
+		}
+    }
+}
+
+.email{
+
+	a{
+		color: inherit;
+		text-decoration: none;
+
+		&:hover{
+			text-decoration: underline;
+		}
+	}
 }
 .copyright {
     background: #333;
