--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -278,6 +278,18 @@ article p {
   padding: 0 5% 5%;
   width: 90%;
 }
+.contact_box p img {
+  margin: 0 10px 0 0;
+  width: 15px;
+}
+
+.email a {
+  color: inherit;
+  text-decoration: none;
+}
+.email a:hover {
+  text-decoration: underline;
+}
 
 .copyright {
   background: #333;
