--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -184,7 +184,7 @@ article{
 }
 
 .n_contain {
-    background: url("http://subtlepatterns.com/patterns/tiny_grid.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: url("../img/grid.jpg") repeat scroll 0 0 rgba(0, 0, 0, 0);
     overflow: auto;
     padding: 50px 0;
 }
@@ -261,11 +261,8 @@ article{
 		    width: 15px;
 		}
     }
-}
 
-.email{
-
-	a{
+    a{
 		color: inherit;
 		text-decoration: none;
 
@@ -274,6 +271,7 @@ article{
 		}
 	}
 }
+
 .copyright {
     background: #333;
     color: #ccc;
