--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -215,7 +215,7 @@ article p {
 }
 
 .n_contain {
-  background: url("http://subtlepatterns.com/patterns/tiny_grid.png") repeat scroll 0 0 rgba(0, 0, 0, 0);
+  background: url("../img/grid.jpg") repeat scroll 0 0 rgba(0, 0, 0, 0);
   overflow: auto;
   padding: 50px 0;
 }
@@ -282,12 +282,11 @@ article p {
   margin: 0 10px 0 0;
   width: 15px;
 }
-
-.email a {
+.contact_box a {
   color: inherit;
   text-decoration: none;
 }
-.email a:hover {
+.contact_box a:hover {
   text-decoration: underline;
 }
 
