--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -214,7 +214,7 @@ article{
 .c_n {
     background: #fff;
     box-shadow: 0 0 2px #ccc;
-    height: 335px;
+    min-height: 335px;
     margin: auto;
     padding: 2% 0 10%;
     width: 85%;
