network li margin

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -196,6 +196,7 @@ article{
 
 	li {
 	    float: left;
+	    margin: 0 0 10px;
 	    min-height: 350px;
 	    text-align: center;
 	    width: 33.3333%;
