--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -78,6 +78,7 @@ body{
 
 }
 
+
 .tree{
 	background: url(../img/trees.jpg) no-repeat;
 
@@ -353,14 +354,24 @@ article{
     position: fixed;
     right: 20px;
     text-decoration: none;
+    transition: all 0.3s ease 0s;
     
-	
+	&:hover{
+			-webkit-animation: up_float 1s linear infinite;
+		    -moz-animation: up_float 1s linear infinite;
+		    animation: up_float 1s linear infinite;
+
+		}
+
+
 	p{
 		opacity: .3;
-		transition: all 0.3s ease 0s;
+		transition: inherit;
 
 		&:hover{
 			opacity: 1;
+			
+
 		}
 	}
 
@@ -371,3 +382,23 @@ article{
 	}
 }
 
+@-moz-keyframes up_float{
+	0% {bottom: 50%;}
+	50% {bottom: 52%;}
+	100% {bottom: 50%;}
+
+}
+
+@-webkit-keyframes up_float{
+	0% {bottom: 50%;}
+	50% {bottom: 52%;}
+	100% {bottom: 50%;}
+
+}
+
+@-moz-keyframes up_float{
+	0% {bottom: 50%;}
+	50% {bottom: 52%;}
+	100% {bottom: 50%;}
+
+}
