--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -311,6 +311,12 @@ article p {
     width: 50%;
   }
 }
+@media screen and (min-width: 641px) and (max-width: 960px) {
+  .network li:last-child {
+    left: 25%;
+    position: relative;
+  }
+}
 @media screen and (max-width: 640px) {
   .network li {
     width: 100%;
