--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,7 @@ body{
 }
 
 .head{
-	background: url(../img/trees.jpg) no-repeat;
+	background: url(img/trees.jpg) no-repeat;
 	height: 550px;
 	text-align: center;
 	transition: all 0.3s ease 0s;
@@ -247,7 +247,7 @@ article{
 }
 
 .n_contain {
-    background: url("../img/grid.jpg") repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: url("img/grid.jpg") repeat scroll 0 0 rgba(0, 0, 0, 0);
     overflow: auto;
     padding: 50px 0;
 }
